--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </ul>
                 <p>Throughout this page, we use lists to give a list of the tags related to the topic given by the heading in each section. Lists can be very useful, as there is plenty of content that is displayed in a list format, but they also help accessibility. Lists will tell screen reader users how many elements there are in that list (they can use the list items to do that), which means that a user knows how many items are in the group that they'll have to listen to. We'll use these a lot in our pages, especially when adding navigation.</p>
 
-                <p>can also nest lists inside of each other, as you saw in the headings and grouping content section above. Making your content easier to scan and understand improves the user experience, and lists can be a big part of that.</p>
+                <p>You can also nest lists inside of each other, as you saw in the headings and grouping content section above. Making your content easier to scan and understand improves the user experience, and lists can be a big part of that.</p>
 </section>
         </main>
 
